# swift

./: CMakeLists.txt
cmake/modules/: AddSwift.cmake  AddSwiftSyntaxTableGen.cmake  AddSwiftTableGen.cmake  SwiftHandleGybSources.cmake  SwiftSyntaxLibrary.cmake
include/swift/: Subsystems.h
lib/AST/: ASTDumper.cpp  ASTPrinter.cpp  ASTVerifier.cpp  ASTWalker.cpp  Attr.cpp  Decl.cpp  LegacyASTTransformer.cpp  NameLookupImpl.h  SourceEntityWalker.cpp  Stmt.cpp
lib/ClangImporter/: ImportDecl.cpp  ImportMacro.cpp  ImporterImpl.h
lib/FrontendTool/: FrontendTool.cpp
lib/IDE/: CodeCompletion.cpp
lib/IRGen/: GenDecl.cpp
lib/Parse/: ParseDecl.cpp  ParseStmt.cpp  Parser.cpp
lib/SILGen/: SILGen.cpp  SILGen.h  SILGenDecl.cpp  SILGenFunction.h
lib/Sema/: TypeCheckAttr.cpp  TypeCheckDecl.cpp  TypeCheckStmt.cpp
lib/Serialization/: Serialization.cpp
lib/Syntax/: CMakeLists.txt  LegacyASTTransformer.cpp  README.md  RawSyntax.cpp  Syntax.cpp  SyntaxFactory.cpp  SyntaxFactory.cpp.gyb  SyntaxNodes.cpp.gyb  TokenSyntax.cpp  TypeSyntax.cpp
lib/Syntax/TableGen/: CMakeLists.txt  swift-syntax-tblgen.cpp
stdlib/internal/: CMakeLists.txt
test/: CMakeLists.txt
test/Sema/: diag_pound_diagnostics.swift
test/SwiftLanguage/: SwiftLanguageTests.swift
test/SwiftSyntax/: AtomicCache.swift  ParseFile.swift  SyntaxFactory.swift
tools/: CMakeLists.txt
tools/SwiftLanguage/: Package.swift
tools/SwiftSyntax/: SwiftSyntax.swift  Trivia.swift
tools/cov-compare/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  CoverageCSS.inc  HTMLWriter.cpp  (+11 more)
utils/: gyb_syntax_support.py
(+110 files in other folders)
